# rozetta

./: .gitignore  pyproject.toml
calibration/: calibration_offsets.py
src/: main.py
src/config/: offsets.json  robot.json  servo_calibration.json
src/control/: ServoControlAbort.py  gait_controller.py  robot_interface.py  servo.py
src/controller/: PS4Controller.py
src/gait/: bezier_gait.py
src/hardware/: ServoController.py
src/kinematics/: Forward.py  Inverse.py  LieAlgebra.py  RobotModel.py
test/: manual_ik_test.py  run_gait_on_robot.py  test_full_kinematics.py  test_ik_leg.py  test_inverse.py  test_servo_raw.py  visualize_gait.py
