[project]
name = "Robot"
version = "1.0.0"
description = "Robot Quadrupedo"
authors = [
    {name = "albortas",email = "garlad628@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)"
]
[tool.poetry]
packages = [
    {include = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"